fix(serve): use HTTP under Headscale
